Remove redundant dependency
Towards #20

--- a/remake_species_data.yml
+++ b/remake_species_data.yml
@@ -481,7 +481,7 @@ targets:
         PHPH_Growth,
         PILI_Growth,
         PUTU_Growth,
-        IndividualsList=IndividualsList)
+        NULL)
 
   ReproductiveCosts_all:
     command: >
