--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -4,80 +4,108 @@ BAER:
   prepollen_aborted_inv: [bud_tiny, bud_small, bud_mid, bud_big, bud_just_opening, cone_aborted]
   prepollen_success_inv: [flower_petals, flower_stigma, flower_style, finished_flower_stigma, cone_green_01, cone_green_02, cone_green_03, cone_green_04, cone_base_green_01, cone_base_green_02, cone_base_green_03, cone_base_green_04]
   propagule_inv: [seed]
+  seed_costs: [cone_brown, cone_base_brown, flower_petals, seed_pod, seed, flower_style]
+  seed_costs_scale: [seed, seed, flower_petals, seed_pod, seed, flower_style]
 BOLE:
   packaging_dispersal_inv: [late_flower_petals, seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, seed_aborted]
   prepollen_aborted_inv: [bud_tiny, bud_small, bud_mid, bud_big]
   prepollen_success_inv: [flower_petals, flower_calyx, finished_flower, finished_flower_stigma, late_finished_flower, pedicel]
   propagule_inv: [seed]
+  seed_costs: [late_flower_petals, seed_pod, seed, late_finished_flower, pedicel]
+  seed_costs_scale: [late_flower_petals, seed_pod, seed, late_finished_flower, pedicel]
 COER:
   packaging_dispersal_inv: [inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, bract_fruit]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01]
   prepollen_aborted_inv: [inflorescence_bud_tiny, inflorescence_bud_mid, bud_big]
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, finished_flower]
   propagule_inv: [fruit_mature]
+  seed_costs: [inflorescence_stalk_in_fruit, flower_petals, bract_fruit, fruit_mature]
+  seed_costs_scale: [inflorescence_stalk_in_fruit, flower_petals, bract_fruit, fruit_mature]
 EPMI:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_young, fruit_large_immature_01]
   prepollen_aborted_inv: [bud_tiny, bud_mid, bud_big]
   prepollen_success_inv: [flower_petals, flower_calyx, finished_flower]
   propagule_inv: [seed]
+  seed_costs: [flower_petals, seed_pod, seed]
+  seed_costs_scale: [flower_petals, seed_pod, seed]
 GRBU:
   packaging_dispersal_inv: [pedicel, seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_large_immature_02, fruit_large_immature_03, fruit_large_immature_04, fruit_large_immature_05, fruit_large_immature_06, seed_aborted]
   prepollen_aborted_inv: [inflorescence_bud_small, bud_tiny, bud_small, bud_mid, bud_big]
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, finished_flower_stigma]
   propagule_inv: [seed]
+  seed_costs: [inflorescence_stalk, flower_petals, pedicel, seed_pod, seed]
+  seed_costs_scale: [inflorescence_stalk, flower_petals, pedicel, seed_pod, seed]
 GRSP:
   packaging_dispersal_inv: [inflorescence_stalk_in_fruit, pedicel, seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_large_immature_02, fruit_large_immature_03, fruit_large_immature_04, fruit_large_immature_05, fruit_large_immature_06, seed_aborted]
   prepollen_aborted_inv: [inflorescence_bud_small, bud_tiny, bud_small, bud_mid, bud_big, bud_just_opening]
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, finished_flower_stigma]
   propagule_inv: [seed]
+  seed_costs: [inflorescence_stalk_in_fruit, flower_petals, pedicel, seed_pod, seed]
+  seed_costs_scale: [inflorescence_stalk_in_fruit, flower_petals, pedicel, seed_pod, seed]
 HATE:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, seed_aborted]
   prepollen_aborted_inv: [inflorescence_bud_tiny, inflorescence_bud_small, inflorescence_bud_mid, inflorescence_bud_big_bracts, inflorescence_bud_big_flowers]
   prepollen_success_inv: [flower_petals, flower_stigma, finished_flower_stigma]
   propagule_inv: [seed_immature, seed]
+  seed_costs: [inflorescence_bud_big_bracts, flower_petals, seed_pod, seed]
+  seed_costs_scale: [inflorescence_bud_big_bracts, flower_petals, seed_pod, seed]
 HEPU:
   packaging_dispersal_inv: [calyx_fruit]
   postpollen_aborted_inv: [fruit_young, fruit_young_aborting, fruit_large_immature_01, fruit_large_immature_aborting, fruit_aborted]
   prepollen_aborted_inv: [bud_small, bud_big]
   prepollen_success_inv: [flower_petals, flower_calyx, flower_calyx_aborting, finished_flower, finished_flower_aborting]
   propagule_inv: [fruit_mature]
+  seed_costs: [flower_petals, calyx_fruit, fruit_mature]
+  seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature]
 LEES:
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted]
   prepollen_aborted_inv: [bud_aborted, bud_tiny, bud_mid, bud_big]
   prepollen_success_inv: [flower_petals, flower_calyx, finished_flower, calyx_fruit]
   propagule_inv: [fruit_mature]
+  seed_costs: [flower_petals, calyx_fruit, fruit_mature]
+  seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature]
 PELA:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_large_immature_02, fruit_large_immature_03, fruit_large_immature_04, fruit_large_immature_05, fruit_large_immature_06]
   prepollen_aborted_inv: [bud_small, bud_mid, bud_big]
   prepollen_success_inv: [flower_petals, flower_stigma, finished_flower_stigma, pedicel]
   propagule_inv: [seed]
+  seed_costs: [flower_petals, pedicel, seed_pod, seed]
+  seed_costs_scale: [flower_petals, pedicel, seed_pod, seed]
 PEPU:
   packaging_dispersal_inv: [cone_brown]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, fruit_empty, cone_just_starting_01, cone_just_starting_02, cone_young_01, cone_young_02, cone_young_03, cone_young_04]
   prepollen_aborted_inv: [bud_aborted, bud_tiny, bud_big, cone_aborted]
   prepollen_success_inv: [flower_petals, flower_stigma, flower_calyx, cone_green_01, cone_green_02, cone_green_03, cone_green_04]
   propagule_inv: [fruit_mature]
+  seed_costs: [cone_brown, flower_petals, flower_calyx, fruit_mature]
+  seed_costs_scale: [cone_brown, flower_petals, flower_calyx, fruit_mature]
 PHPH:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, seed_aborted]
   prepollen_aborted_inv: [bud_small, bud_mid, flower_aborted, flower_aborted_without_petals]
   prepollen_success_inv: [flower_petals, flower_petals_small, flower_stigma, flower_calyx, finished_flower, finished_flower_stigma, late_finished_flower, bract_flower_or_finished_flower]
   propagule_inv: [seed]
+  seed_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
+  seed_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
 PILI:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_young, fruit_large_immature_01, fruit_aborted]
   prepollen_aborted_inv: [inflorescence_bud_mid, bud_big]
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, flower_calyx, bract_flower_or_finished_flower]
   propagule_inv: [seed]
+  seed_costs: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx, seed_pod, seed]
+  seed_costs_scale: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx, seed_pod, seed]
 PUTU:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_large_immature_01, fruit_aborted, seed_aborted]
   prepollen_aborted_inv: [bud_big, flower_aborted]
   prepollen_success_inv: [flower_petals, flower_stigma, flower_calyx, finished_flower_stigma, bract_flower_or_finished_flower, bract_fruit]
   propagule_inv: [seed]
+  seed_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
+  seed_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
