changing variable names making sure script runs adding in other lists to calculate "dispersal costs" - still in progress

--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -4,16 +4,34 @@ BAER:
   prepollen_aborted_inv: [bud_tiny, bud_small, bud_mid, bud_big, bud_just_opening, cone_aborted]
   prepollen_success_inv: [flower_petals, flower_stigma, flower_style, finished_flower_stigma, cone_green_01, cone_green_02, cone_green_03, cone_green_04, cone_base_green_01, cone_base_green_02, cone_base_green_03, cone_base_green_04]
   propagule_inv: [seed]
+
   seed_costs: [cone_brown, cone_base_brown, flower_petals, seed_pod, seed, flower_style]
   seed_costs_scale: [seed, seed, flower_petals, seed_pod, seed, flower_style]
+  prepollen_costs: [cone_green, flower_petals, flower_stigma, flower_style]
+  prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma, flower_style]
+  dispersal_costs: [cone_brown, cone_base_brown, seed_pod]
+  dispersal_costs_scale: [seed, seed, seed_pod]
+  dispersal_before_pollen_costs: [cone_green]
+  dispersal_before_pollen_costs_scale: [flower_petals]
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 BOLE:
   packaging_dispersal_inv: [late_flower_petals, seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, seed_aborted]
   prepollen_aborted_inv: [bud_tiny, bud_small, bud_mid, bud_big]
   prepollen_success_inv: [flower_petals, flower_calyx, finished_flower, finished_flower_stigma, late_finished_flower, pedicel]
   propagule_inv: [seed]
+
   seed_costs: [late_flower_petals, seed_pod, seed, late_finished_flower, pedicel]
   seed_costs_scale: [late_flower_petals, seed_pod, seed, late_finished_flower, pedicel]
+  prepollen_costs: [flower_petals, pedicel, finished_flower, finished_flower_stigma]
+  prepollen_costs_scale: [flower_petals, pedicel, finished_flower, finished_flower_stigma]
+  dispersal_costs: [seed_pod, late_flower_petals, late_finished_flower]
+  dispersal_costs_scale: [seed_pod, late_flower_petals, late_finished_flower]
+  dispersal_before_pollen_costs: [flower_petals, finished_flower]
+  dispersal_before_pollen_costs_scale: [flower_petals, finished_flower]
+  seed_before_pollen_costs: [finished_flower_stigma]
+  seed_before_pollen_costs_scale: [finished_flower_stigma]
 COER:
   packaging_dispersal_inv: [inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, bract_fruit]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01]
@@ -21,7 +39,15 @@ COER:
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, finished_flower]
   propagule_inv: [fruit_mature]
   seed_costs: [inflorescence_stalk_in_fruit, flower_petals, bract_fruit, fruit_mature]
-  seed_costs_scale: [inflorescence_stalk_in_fruit, flower_petals, bract_fruit, fruit_mature]
+  seed_costs_scale: [fruit_mature, flower_petals, bract_fruit, fruit_mature]
+  prepollen_costs: [inflorescence_stalk, flower_petals, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma]
+  dispersal_costs: [inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, bract_fruit]
+  dispersal_costs_scale: [fruit_mature, fruit_mature, fruit_mature, bract_fruit]
+  dispersal_before_pollen_costs: [inflorescence_stalk]
+  dispersal_before_pollen_costs_scale: [flower_petals]
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 EPMI:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_young, fruit_large_immature_01]
@@ -30,6 +56,14 @@ EPMI:
   propagule_inv: [seed]
   seed_costs: [flower_petals, seed_pod, seed]
   seed_costs_scale: [flower_petals, seed_pod, seed]
+  prepollen_costs: [flower_petals, flower_calyx]
+  prepollen_costs_scale: [flower_petals, flower_calyx]
+  dispersal_costs: [seed_pod]
+  dispersal_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs: [flower_calyx]
+  dispersal_before_pollen_costs_scale: [flower_calyx]
+  seed_before_pollen_costs: []
+  seed_before_pollen_costs_scale: []
 GRBU:
   packaging_dispersal_inv: [pedicel, seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_large_immature_02, fruit_large_immature_03, fruit_large_immature_04, fruit_large_immature_05, fruit_large_immature_06, seed_aborted]
@@ -37,7 +71,15 @@ GRBU:
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, finished_flower_stigma]
   propagule_inv: [seed]
   seed_costs: [inflorescence_stalk, flower_petals, pedicel, seed_pod, seed]
-  seed_costs_scale: [inflorescence_stalk, flower_petals, pedicel, seed_pod, seed]
+  seed_costs_scale: [seed, flower_petals, pedicel, seed_pod, seed]
+  prepollen_costs: [flower_petals, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_stigma]
+  dispersal_costs: [pedicel, seed_pod]
+  dispersal_costs_scale: [pedicel, seed_pod]
+  dispersal_before_pollen_costs: [inflorescence_stalk]
+  dispersal_before_pollen_costs_scale: [flower_petals]
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 GRSP:
   packaging_dispersal_inv: [inflorescence_stalk_in_fruit, pedicel, seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_large_immature_02, fruit_large_immature_03, fruit_large_immature_04, fruit_large_immature_05, fruit_large_immature_06, seed_aborted]
@@ -45,7 +87,15 @@ GRSP:
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, finished_flower_stigma]
   propagule_inv: [seed]
   seed_costs: [inflorescence_stalk_in_fruit, flower_petals, pedicel, seed_pod, seed]
-  seed_costs_scale: [inflorescence_stalk_in_fruit, flower_petals, pedicel, seed_pod, seed]
+  seed_costs_scale: [seed, flower_petals, pedicel, seed_pod, seed]
+  prepollen_costs: [inflorescence_stalk, flower_petals, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma]
+  dispersal_costs: [inflorescence_stalk_in_fruit, pedicel, seed_pod]
+  dispersal_costs_scale: [seed, pedicel, seed_pod]
+  dispersal_before_pollen_costs: [inflorescence_stalk, flower_stigma]
+  dispersal_before_pollen_costs_scale: [flower_petals, flower_stigma]
+  seed_before_pollen_costs: []
+  seed_before_pollen_costs_scale: []
 HATE:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, seed_aborted]
@@ -54,6 +104,14 @@ HATE:
   propagule_inv: [seed_immature, seed]
   seed_costs: [inflorescence_bud_big_bracts, flower_petals, seed_pod, seed]
   seed_costs_scale: [inflorescence_bud_big_bracts, flower_petals, seed_pod, seed]
+  prepollen_costs: [inflorescence_bud_big_bracts, flower_petals, flower_stigma]
+  prepollen_costs_scale: [inflorescence_bud_big_bracts, flower_petals, flower_stigma]
+  dispersal_costs: [seed_pod]
+  dispersal_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs: []
+  dispersal_before_pollen_costs_scale: []
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 HEPU:
   packaging_dispersal_inv: [calyx_fruit]
   postpollen_aborted_inv: [fruit_young, fruit_young_aborting, fruit_large_immature_01, fruit_large_immature_aborting, fruit_aborted]
@@ -62,6 +120,14 @@ HEPU:
   propagule_inv: [fruit_mature]
   seed_costs: [flower_petals, calyx_fruit, fruit_mature]
   seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature]
+  prepollen_costs: [flower_petals, flower_calyx]
+  prepollen_costs_scale: [flower_petals, flower_calyx]
+  dispersal_costs: [calyx_fruit]
+  dispersal_costs_scale: [calyx_fruit]
+  dispersal_before_pollen_costs: [flower_calyx]
+  dispersal_before_pollen_costs_scale: [flower_calyx]
+  seed_before_pollen_costs: []
+  seed_before_pollen_costs_scale: []
 LEES:
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted]
   prepollen_aborted_inv: [bud_aborted, bud_tiny, bud_mid, bud_big]
@@ -69,6 +135,14 @@ LEES:
   propagule_inv: [fruit_mature]
   seed_costs: [flower_petals, calyx_fruit, fruit_mature]
   seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature]
+  prepollen_costs: [flower_petals, flower_calyx]
+  prepollen_costs_scale: [flower_petals, flower_calyx]
+  dispersal_costs: [calyx_fruit]
+  dispersal_costs_scale: [calyx_fruit]
+  dispersal_before_pollen_costs: [flower_calyx]
+  dispersal_before_pollen_costs_scale: [flower_calyx]
+  seed_before_pollen_costs: []
+  seed_before_pollen_costs_scale: []
 PELA:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_large_immature_02, fruit_large_immature_03, fruit_large_immature_04, fruit_large_immature_05, fruit_large_immature_06]
@@ -77,6 +151,14 @@ PELA:
   propagule_inv: [seed]
   seed_costs: [flower_petals, pedicel, seed_pod, seed]
   seed_costs_scale: [flower_petals, pedicel, seed_pod, seed]
+  prepollen_costs: [flower_petals, pedicel, flower_stigma]
+  prepollen_costs_scale: [flower_petals, pedicel, flower_stigma]
+  dispersal_costs: [seed_pod]
+  dispersal_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs: []
+  dispersal_before_pollen_costs_scale: []
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 PEPU:
   packaging_dispersal_inv: [cone_brown]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, fruit_empty, cone_just_starting_01, cone_just_starting_02, cone_young_01, cone_young_02, cone_young_03, cone_young_04]
@@ -84,7 +166,15 @@ PEPU:
   prepollen_success_inv: [flower_petals, flower_stigma, flower_calyx, cone_green_01, cone_green_02, cone_green_03, cone_green_04]
   propagule_inv: [fruit_mature]
   seed_costs: [cone_brown, flower_petals, flower_calyx, fruit_mature]
-  seed_costs_scale: [cone_brown, flower_petals, flower_calyx, fruit_mature]
+  seed_costs_scale: [fruit_mature, flower_petals, flower_calyx, fruit_mature]
+  prepollen_costs: [cone_green, flower_petals, flower_calyx, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_petals, flower_calyx, flower_stigma]
+  dispersal_costs: [cone_brown]
+  dispersal_costs_scale: [fruit_mature]
+  dispersal_before_pollen_costs: [cone_green]
+  dispersal_before_pollen_costs_scale: [flower_petals]
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 PHPH:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, seed_aborted]
@@ -93,6 +183,14 @@ PHPH:
   propagule_inv: [seed]
   seed_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
   seed_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
+  prepollen_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, flower_stigma]
+  dispersal_costs: [seed_pod]
+  dispersal_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs: []
+  dispersal_before_pollen_costs_scale: []
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 PILI:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_young, fruit_large_immature_01, fruit_aborted]
@@ -100,7 +198,15 @@ PILI:
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, flower_calyx, bract_flower_or_finished_flower]
   propagule_inv: [seed]
   seed_costs: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx, seed_pod, seed]
-  seed_costs_scale: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx, seed_pod, seed]
+  seed_costs_scale: [seed, seed, flower_petals, flower_calyx, seed_pod, seed]
+  prepollen_costs: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_petals, flower_petals, flower_calyx, flower_stigma]
+  dispersal_costs: [seed_pod]
+  dispersal_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs: []
+  dispersal_before_pollen_costs_scale: []
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 PUTU:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_large_immature_01, fruit_aborted, seed_aborted]
@@ -109,3 +215,11 @@ PUTU:
   propagule_inv: [seed]
   seed_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
   seed_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
+  prepollen_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, flower_stigma]
+  dispersal_costs: [seed_pod]
+  dispersal_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs: []
+  dispersal_before_pollen_costs_scale: []
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
