--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -11,8 +11,9 @@ BAER:
   prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma, flower_style]
   dispersal_costs: [cone_brown, cone_base_brown, seed_pod]
   dispersal_costs_scale: [seed, seed, seed_pod]
-  dispersal_before_pollen_costs: [cone_green]
-  dispersal_before_pollen_costs_scale: [flower_petals]
+  dispersal_before_pollen_costs: [cone_brown]
+  dispersal_before_pollen_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs_adjust: [0.18]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 BOLE:
@@ -30,6 +31,7 @@ BOLE:
   dispersal_costs_scale: [seed_pod, late_flower_petals, late_finished_flower]
   dispersal_before_pollen_costs: [flower_petals, finished_flower]
   dispersal_before_pollen_costs_scale: [flower_petals, finished_flower]
+  dispersal_before_pollen_costs_adjust: [1,1]
   seed_before_pollen_costs: [finished_flower_stigma]
   seed_before_pollen_costs_scale: [finished_flower_stigma]
 COER:
@@ -45,7 +47,8 @@ COER:
   dispersal_costs: [inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, bract_fruit]
   dispersal_costs_scale: [fruit_mature, fruit_mature, fruit_mature, bract_fruit]
   dispersal_before_pollen_costs: [inflorescence_stalk]
-  dispersal_before_pollen_costs_scale: [flower_petals]
+  dispersal_before_pollen_costs_scale: [fruit_mature]
+  dispersal_before_pollen_costs_adjust: [1]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 EPMI:
@@ -62,6 +65,7 @@ EPMI:
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: [flower_calyx]
   dispersal_before_pollen_costs_scale: [flower_calyx]
+  dispersal_before_pollen_costs_adjust: [1]
   seed_before_pollen_costs: []
   seed_before_pollen_costs_scale: []
 GRBU:
@@ -77,7 +81,8 @@ GRBU:
   dispersal_costs: [pedicel, seed_pod]
   dispersal_costs_scale: [pedicel, seed_pod]
   dispersal_before_pollen_costs: [inflorescence_stalk]
-  dispersal_before_pollen_costs_scale: [flower_petals]
+  dispersal_before_pollen_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs_adjust: [1]  
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 GRSP:
@@ -92,10 +97,11 @@ GRSP:
   prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma]
   dispersal_costs: [inflorescence_stalk_in_fruit, pedicel, seed_pod]
   dispersal_costs_scale: [seed, pedicel, seed_pod]
-  dispersal_before_pollen_costs: [inflorescence_stalk, flower_stigma]
-  dispersal_before_pollen_costs_scale: [flower_petals, flower_stigma]
-  seed_before_pollen_costs: []
-  seed_before_pollen_costs_scale: []
+  dispersal_before_pollen_costs: [inflorescence_stalk]
+  dispersal_before_pollen_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs_adjust: [1]
+  seed_before_pollen_costs: [flower_stigma]
+  seed_before_pollen_costs_scale: [flower_stigma]
 HATE:
   packaging_dispersal_inv: [seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, seed_aborted]
@@ -110,6 +116,7 @@ HATE:
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
+  dispersal_before_pollen_costs_adjust: []
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 HEPU:
@@ -124,8 +131,9 @@ HEPU:
   prepollen_costs_scale: [flower_petals, flower_calyx]
   dispersal_costs: [calyx_fruit]
   dispersal_costs_scale: [calyx_fruit]
-  dispersal_before_pollen_costs: [flower_calyx]
-  dispersal_before_pollen_costs_scale: [flower_calyx]
+  dispersal_before_pollen_costs: [calyx_fruit]
+  dispersal_before_pollen_costs_scale: [calyx_fruit]
+  dispersal_before_pollen_costs_adjust: [0.75]
   seed_before_pollen_costs: []
   seed_before_pollen_costs_scale: []
 LEES:
@@ -141,6 +149,7 @@ LEES:
   dispersal_costs_scale: [calyx_fruit]
   dispersal_before_pollen_costs: [flower_calyx]
   dispersal_before_pollen_costs_scale: [flower_calyx]
+  dispersal_before_pollen_costs_adjust: [1]
   seed_before_pollen_costs: []
   seed_before_pollen_costs_scale: []
 PELA:
@@ -157,6 +166,7 @@ PELA:
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
+  dispersal_before_pollen_costs_adjust: []
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 PEPU:
@@ -171,8 +181,9 @@ PEPU:
   prepollen_costs_scale: [flower_petals, flower_petals, flower_calyx, flower_stigma]
   dispersal_costs: [cone_brown]
   dispersal_costs_scale: [fruit_mature]
-  dispersal_before_pollen_costs: [cone_green]
-  dispersal_before_pollen_costs_scale: [flower_petals]
+  dispersal_before_pollen_costs: [cone_brown]
+  dispersal_before_pollen_costs_scale: [fruit_mature]
+  dispersal_before_pollen_costs_adjust: [0.5]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 PHPH:
@@ -189,6 +200,7 @@ PHPH:
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
+  dispersal_before_pollen_costs_adjust: []
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 PILI:
@@ -205,6 +217,7 @@ PILI:
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
+  dispersal_before_pollen_costs_adjust: []
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 PUTU:
@@ -221,5 +234,6 @@ PUTU:
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
+  dispersal_before_pollen_costs_adjust: []
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
