--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -4,29 +4,27 @@ BAER:
   prepollen_aborted_inv: [bud_tiny, bud_small, bud_mid, bud_big, bud_just_opening, cone_aborted]
   prepollen_success_inv: [flower_petals, flower_stigma, flower_style, finished_flower_stigma, cone_green_01, cone_green_02, cone_green_03, cone_green_04, cone_base_green_01, cone_base_green_02, cone_base_green_03, cone_base_green_04]
   propagule_inv: [seed]
-
   seed_costs: [cone_brown, cone_base_brown, flower_petals, seed_pod, seed, flower_style]
   seed_costs_scale: [seed, seed, flower_petals, seed_pod, seed, flower_style]
-  prepollen_costs: [cone_green, flower_petals, flower_stigma, flower_style]
-  prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma, flower_style]
+  prepollen_costs: [flower_petals, flower_stigma, flower_style]
+  prepollen_costs_scale: [flower_petals, flower_stigma, flower_style]
   dispersal_costs: [cone_brown, cone_base_brown, seed_pod]
   dispersal_costs_scale: [seed, seed, seed_pod]
   dispersal_before_pollen_costs: [cone_brown]
-  dispersal_before_pollen_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs_scale: [flower_petals]
   dispersal_before_pollen_costs_adjust: [0.18]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 BOLE:
-  packaging_dispersal_inv: [late_flower_petals, seed_pod]
+  packaging_dispersal_inv: [late_flower_petals, late_finished_flower, seed_pod]
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, seed_aborted]
   prepollen_aborted_inv: [bud_tiny, bud_small, bud_mid, bud_big]
   prepollen_success_inv: [flower_petals, flower_calyx, finished_flower, finished_flower_stigma, late_finished_flower, pedicel]
   propagule_inv: [seed]
-
   seed_costs: [late_flower_petals, seed_pod, seed, late_finished_flower, pedicel]
   seed_costs_scale: [late_flower_petals, seed_pod, seed, late_finished_flower, pedicel]
-  prepollen_costs: [flower_petals, pedicel, finished_flower, finished_flower_stigma]
-  prepollen_costs_scale: [flower_petals, pedicel, finished_flower, finished_flower_stigma]
+  prepollen_costs: [pedicel, finished_flower_stigma]
+  prepollen_costs_scale: [pedicel, finished_flower_stigma]
   dispersal_costs: [seed_pod, late_flower_petals, late_finished_flower]
   dispersal_costs_scale: [seed_pod, late_flower_petals, late_finished_flower]
   dispersal_before_pollen_costs: [flower_petals, finished_flower]
@@ -42,12 +40,12 @@ COER:
   propagule_inv: [fruit_mature]
   seed_costs: [inflorescence_stalk_in_fruit, flower_petals, bract_fruit, fruit_mature]
   seed_costs_scale: [fruit_mature, flower_petals, bract_fruit, fruit_mature]
-  prepollen_costs: [inflorescence_stalk, flower_petals, flower_stigma]
-  prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma]
+  prepollen_costs: [flower_petals, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_stigma]
   dispersal_costs: [inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, bract_fruit]
   dispersal_costs_scale: [fruit_mature, fruit_mature, fruit_mature, bract_fruit]
   dispersal_before_pollen_costs: [inflorescence_stalk]
-  dispersal_before_pollen_costs_scale: [fruit_mature]
+  dispersal_before_pollen_costs_scale: [flower_petals]
   dispersal_before_pollen_costs_adjust: [1]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
@@ -59,8 +57,8 @@ EPMI:
   propagule_inv: [seed]
   seed_costs: [flower_petals, seed_pod, seed]
   seed_costs_scale: [flower_petals, seed_pod, seed]
-  prepollen_costs: [flower_petals, flower_calyx]
-  prepollen_costs_scale: [flower_petals, flower_calyx]
+  prepollen_costs: [flower_petals]
+  prepollen_costs_scale: [flower_petals]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: [flower_calyx]
@@ -76,13 +74,13 @@ GRBU:
   propagule_inv: [seed]
   seed_costs: [inflorescence_stalk, flower_petals, pedicel, seed_pod, seed]
   seed_costs_scale: [seed, flower_petals, pedicel, seed_pod, seed]
-  prepollen_costs: [flower_petals, flower_stigma]
-  prepollen_costs_scale: [flower_petals, flower_stigma]
+  prepollen_costs: [inflorescence_stalk, flower_petals, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma]
   dispersal_costs: [pedicel, seed_pod]
   dispersal_costs_scale: [pedicel, seed_pod]
-  dispersal_before_pollen_costs: [inflorescence_stalk]
-  dispersal_before_pollen_costs_scale: [seed_pod]
-  dispersal_before_pollen_costs_adjust: [1]  
+  dispersal_before_pollen_costs: []
+  dispersal_before_pollen_costs_scale: []
+  dispersal_before_pollen_costs_adjust: []  
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 GRSP:
@@ -93,12 +91,12 @@ GRSP:
   propagule_inv: [seed]
   seed_costs: [inflorescence_stalk_in_fruit, flower_petals, pedicel, seed_pod, seed]
   seed_costs_scale: [seed, flower_petals, pedicel, seed_pod, seed]
-  prepollen_costs: [inflorescence_stalk, flower_petals, flower_stigma]
-  prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma]
+  prepollen_costs: [flower_petals, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_stigma]
   dispersal_costs: [inflorescence_stalk_in_fruit, pedicel, seed_pod]
   dispersal_costs_scale: [seed, pedicel, seed_pod]
   dispersal_before_pollen_costs: [inflorescence_stalk]
-  dispersal_before_pollen_costs_scale: [seed_pod]
+  dispersal_before_pollen_costs_scale: [flower_petals]
   dispersal_before_pollen_costs_adjust: [1]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
@@ -127,13 +125,13 @@ HEPU:
   propagule_inv: [fruit_mature]
   seed_costs: [flower_petals, calyx_fruit, fruit_mature]
   seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature]
-  prepollen_costs: [flower_petals, flower_calyx]
-  prepollen_costs_scale: [flower_petals, flower_calyx]
+  prepollen_costs: [flower_petals]
+  prepollen_costs_scale: [flower_petals]
   dispersal_costs: [calyx_fruit]
   dispersal_costs_scale: [calyx_fruit]
-  dispersal_before_pollen_costs: [calyx_fruit]
-  dispersal_before_pollen_costs_scale: [calyx_fruit]
-  dispersal_before_pollen_costs_adjust: [0.75]
+  dispersal_before_pollen_costs: [flower_calyx_aborting]
+  dispersal_before_pollen_costs_scale: [flower_calyx_aborting]
+  dispersal_before_pollen_costs_adjust: [1]
   seed_before_pollen_costs: []
   seed_before_pollen_costs_scale: []
 LEES:
@@ -143,8 +141,8 @@ LEES:
   propagule_inv: [fruit_mature]
   seed_costs: [flower_petals, calyx_fruit, fruit_mature]
   seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature]
-  prepollen_costs: [flower_petals, flower_calyx]
-  prepollen_costs_scale: [flower_petals, flower_calyx]
+  prepollen_costs: [flower_petals]
+  prepollen_costs_scale: [flower_petals]
   dispersal_costs: [calyx_fruit]
   dispersal_costs_scale: [calyx_fruit]
   dispersal_before_pollen_costs: [flower_calyx]
@@ -177,12 +175,12 @@ PEPU:
   propagule_inv: [fruit_mature]
   seed_costs: [cone_brown, flower_petals, flower_calyx, fruit_mature]
   seed_costs_scale: [fruit_mature, flower_petals, flower_calyx, fruit_mature]
-  prepollen_costs: [cone_green, flower_petals, flower_calyx, flower_stigma]
-  prepollen_costs_scale: [flower_petals, flower_petals, flower_calyx, flower_stigma]
+  prepollen_costs: [flower_petals, flower_calyx, flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_calyx, flower_stigma]
   dispersal_costs: [cone_brown]
   dispersal_costs_scale: [fruit_mature]
   dispersal_before_pollen_costs: [cone_brown]
-  dispersal_before_pollen_costs_scale: [fruit_mature]
+  dispersal_before_pollen_costs_scale: [flower_petals]
   dispersal_before_pollen_costs_adjust: [0.5]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
@@ -210,7 +208,7 @@ PILI:
   prepollen_success_inv: [inflorescence_stalk, flower_petals, flower_stigma, flower_calyx, bract_flower_or_finished_flower]
   propagule_inv: [seed]
   seed_costs: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx, seed_pod, seed]
-  seed_costs_scale: [seed, seed, flower_petals, flower_calyx, seed_pod, seed]
+  seed_costs_scale: [flower_petals, flower_petals, flower_petals, flower_calyx, seed_pod, seed]
   prepollen_costs: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx, flower_stigma]
   prepollen_costs_scale: [flower_petals, flower_petals, flower_petals, flower_calyx, flower_stigma]
   dispersal_costs: [seed_pod]
