continuing to fix problems with seedcosts

--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -44,9 +44,9 @@ COER:
   prepollen_costs_scale: [flower_petals, flower_stigma]
   dispersal_costs: [inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, bract_fruit]
   dispersal_costs_scale: [fruit_mature, fruit_mature, fruit_mature, bract_fruit]
-  dispersal_before_pollen_costs: [inflorescence_stalk]
-  dispersal_before_pollen_costs_scale: [flower_petals]
-  dispersal_before_pollen_costs_adjust: [1]
+  dispersal_before_pollen_costs: [inflorescence_stalk,inflorescence_stalk_in_fruit,inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large]
+  dispersal_before_pollen_costs_scale: [flower_petals,flower_petals,flower_petals,flower_petals]
+  dispersal_before_pollen_costs_adjust: [1,1,1,0.5]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 EPMI:
@@ -147,7 +147,7 @@ LEES:
   dispersal_costs_scale: [calyx_fruit]
   dispersal_before_pollen_costs: [flower_calyx]
   dispersal_before_pollen_costs_scale: [flower_calyx]
-  dispersal_before_pollen_costs_adjust: [.8]
+  dispersal_before_pollen_costs_adjust: [0.8]
   seed_before_pollen_costs: []
   seed_before_pollen_costs_scale: []
 PELA:
@@ -190,10 +190,10 @@ PHPH:
   prepollen_aborted_inv: [bud_small, bud_mid, flower_aborted, flower_aborted_without_petals]
   prepollen_success_inv: [flower_petals, flower_petals_small, flower_stigma, flower_calyx, finished_flower, finished_flower_stigma, late_finished_flower, bract_flower_or_finished_flower]
   propagule_inv: [seed]
-  seed_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
-  seed_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
-  prepollen_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, flower_stigma]
-  prepollen_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, flower_stigma]
+  seed_costs: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small, seed_pod, seed]
+  seed_costs_scale: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small, seed_pod, seed]
+  prepollen_costs: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small, flower_stigma]
+  prepollen_costs_scale: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small, flower_stigma]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: []
@@ -226,12 +226,12 @@ PUTU:
   propagule_inv: [seed]
   seed_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
   seed_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
-  prepollen_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, flower_stigma]
-  prepollen_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, flower_stigma]
+  prepollen_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, finished_flower_stigma]
+  prepollen_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, finished_flower_stigma]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
   dispersal_before_pollen_costs_adjust: []
-  seed_before_pollen_costs: [flower_stigma]
-  seed_before_pollen_costs_scale: [flower_stigma]
+  seed_before_pollen_costs: [finished_flower_stigma]
+  seed_before_pollen_costs_scale: [finished_flower_stigma]
