continued fixes to make seedcosts work

--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -95,9 +95,9 @@ GRSP:
   prepollen_costs_scale: [flower_petals, flower_stigma]
   dispersal_costs: [inflorescence_stalk_in_fruit, pedicel, seed_pod]
   dispersal_costs_scale: [seed, pedicel, seed_pod]
-  dispersal_before_pollen_costs: [inflorescence_stalk]
-  dispersal_before_pollen_costs_scale: [flower_petals]
-  dispersal_before_pollen_costs_adjust: [1]
+  dispersal_before_pollen_costs: [inflorescence_stalk_in_fruit,inflorescence_stalk]
+  dispersal_before_pollen_costs_scale: [flower_petals,flower_petals]
+  dispersal_before_pollen_costs_adjust: [0.7139572,0.7139572] 
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 HATE:
@@ -105,7 +105,7 @@ HATE:
   postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, seed_aborted]
   prepollen_aborted_inv: [inflorescence_bud_tiny, inflorescence_bud_small, inflorescence_bud_mid, inflorescence_bud_big_bracts, inflorescence_bud_big_flowers]
   prepollen_success_inv: [flower_petals, flower_stigma, finished_flower_stigma]
-  propagule_inv: [seed_immature, seed]
+  propagule_inv: [seed]
   seed_costs: [inflorescence_bud_big_bracts, flower_petals, seed_pod, seed]
   seed_costs_scale: [inflorescence_bud_big_bracts, flower_petals, seed_pod, seed]
   prepollen_costs: [inflorescence_bud_big_bracts, flower_petals, flower_stigma]
@@ -129,9 +129,9 @@ HEPU:
   prepollen_costs_scale: [flower_petals]
   dispersal_costs: [calyx_fruit]
   dispersal_costs_scale: [calyx_fruit]
-  dispersal_before_pollen_costs: [flower_calyx_aborting]
-  dispersal_before_pollen_costs_scale: [flower_calyx_aborting]
-  dispersal_before_pollen_costs_adjust: [1]
+  dispersal_before_pollen_costs: [calyx_fruit]
+  dispersal_before_pollen_costs_scale: [calyx_fruit]
+  dispersal_before_pollen_costs_adjust: [0.709]
   seed_before_pollen_costs: []
   seed_before_pollen_costs_scale: []
 LEES:
@@ -145,9 +145,9 @@ LEES:
   prepollen_costs_scale: [flower_petals]
   dispersal_costs: [calyx_fruit]
   dispersal_costs_scale: [calyx_fruit]
-  dispersal_before_pollen_costs: [flower_calyx]
-  dispersal_before_pollen_costs_scale: [flower_calyx]
-  dispersal_before_pollen_costs_adjust: [0.8]
+  dispersal_before_pollen_costs: [calyx_fruit]
+  dispersal_before_pollen_costs_scale: [calyx_fruit]
+  dispersal_before_pollen_costs_adjust: [0.7]
   seed_before_pollen_costs: []
   seed_before_pollen_costs_scale: []
 PELA:
