adding scaling for dispersal costs

--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -10,6 +10,7 @@ BAER:
   prepollen_costs_scale: [flower_petals, flower_stigma, flower_style]
   dispersal_costs: [cone_brown, cone_base_brown, seed_pod]
   dispersal_costs_scale: [seed, seed, seed_pod]
+  dispersal_costs_adjust: [0.82,0.82,1]
   dispersal_before_pollen_costs: [cone_brown]
   dispersal_before_pollen_costs_scale: [flower_petals]
   dispersal_before_pollen_costs_adjust: [0.18]
@@ -27,6 +28,7 @@ BOLE:
   prepollen_costs_scale: [pedicel, finished_flower_stigma]
   dispersal_costs: [seed_pod, late_flower_petals, late_finished_flower]
   dispersal_costs_scale: [seed_pod, late_flower_petals, late_finished_flower]
+  dispersal_costs_adjust: [1,0.3947868,0.2877256]
   dispersal_before_pollen_costs: [flower_petals, finished_flower]
   dispersal_before_pollen_costs_scale: [flower_petals, finished_flower]
   dispersal_before_pollen_costs_adjust: [1,1]
@@ -44,9 +46,10 @@ COER:
   prepollen_costs_scale: [flower_petals, flower_stigma]
   dispersal_costs: [inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, bract_fruit]
   dispersal_costs_scale: [fruit_mature, fruit_mature, fruit_mature, bract_fruit]
+  dispersal_costs_adjust: [0.4974163,0.722090,0.7799084,1]
   dispersal_before_pollen_costs: [inflorescence_stalk,inflorescence_stalk_in_fruit,inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large]
   dispersal_before_pollen_costs_scale: [flower_petals,flower_petals,flower_petals,flower_petals]
-  dispersal_before_pollen_costs_adjust: [1,1,1,1]
+  dispersal_before_pollen_costs_adjust: [1,0.5025837,0.2779094,0.2200916]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 EPMI:
@@ -61,6 +64,7 @@ EPMI:
   prepollen_costs_scale: [flower_petals]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
+  dispersal_costs_adjust: [0.3534934]
   dispersal_before_pollen_costs: [flower_calyx]
   dispersal_before_pollen_costs_scale: [flower_calyx]
   dispersal_before_pollen_costs_adjust: [1]
@@ -78,6 +82,7 @@ GRBU:
   prepollen_costs_scale: [flower_petals, flower_petals, flower_stigma]
   dispersal_costs: [pedicel, seed_pod]
   dispersal_costs_scale: [pedicel, seed_pod]
+  dispersal_costs_adjust: [1,1]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
   dispersal_before_pollen_costs_adjust: []  
@@ -95,9 +100,10 @@ GRSP:
   prepollen_costs_scale: [flower_petals, flower_stigma]
   dispersal_costs: [inflorescence_stalk_in_fruit, pedicel, seed_pod]
   dispersal_costs_scale: [seed, pedicel, seed_pod]
+  dispersal_costs_adjust: [0.2860428,1,1]
   dispersal_before_pollen_costs: [inflorescence_stalk_in_fruit,inflorescence_stalk]
   dispersal_before_pollen_costs_scale: [flower_petals,flower_petals]
-  dispersal_before_pollen_costs_adjust: [0.7139572,0.7139572] 
+  dispersal_before_pollen_costs_adjust: [0.7139572,1] 
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 HATE:
@@ -112,6 +118,7 @@ HATE:
   prepollen_costs_scale: [inflorescence_bud_big_bracts, flower_petals, flower_stigma]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
+  dispersal_costs_adjust: [1]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
   dispersal_before_pollen_costs_adjust: []
@@ -129,6 +136,7 @@ HEPU:
   prepollen_costs_scale: [flower_petals]
   dispersal_costs: [calyx_fruit]
   dispersal_costs_scale: [calyx_fruit]
+  dispersal_costs_adjust: [0.291]
   dispersal_before_pollen_costs: [calyx_fruit]
   dispersal_before_pollen_costs_scale: [calyx_fruit]
   dispersal_before_pollen_costs_adjust: [0.709]
@@ -145,6 +153,7 @@ LEES:
   prepollen_costs_scale: [flower_petals]
   dispersal_costs: [calyx_fruit]
   dispersal_costs_scale: [calyx_fruit]
+  dispersal_costs_adjust: [0.3]
   dispersal_before_pollen_costs: [calyx_fruit]
   dispersal_before_pollen_costs_scale: [calyx_fruit]
   dispersal_before_pollen_costs_adjust: [0.7]
@@ -162,6 +171,7 @@ PELA:
   prepollen_costs_scale: [flower_petals, pedicel, flower_stigma]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
+  dispersal_costs_adjust: [1]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
   dispersal_before_pollen_costs_adjust: []
@@ -179,6 +189,7 @@ PEPU:
   prepollen_costs_scale: [flower_petals, flower_calyx, flower_stigma]
   dispersal_costs: [cone_brown]
   dispersal_costs_scale: [fruit_mature]
+  dispersal_costs_adjust: [0.5]
   dispersal_before_pollen_costs: [cone_brown]
   dispersal_before_pollen_costs_scale: [flower_petals]
   dispersal_before_pollen_costs_adjust: [0.5]
@@ -196,6 +207,7 @@ PHPH:
   prepollen_costs_scale: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small, flower_stigma]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
+  dispersal_costs_adjust: [1]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
   dispersal_before_pollen_costs_adjust: []
@@ -213,6 +225,7 @@ PILI:
   prepollen_costs_scale: [flower_petals, flower_petals, flower_petals, flower_calyx, flower_stigma]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
+  dispersal_costs_adjust: [1]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
   dispersal_before_pollen_costs_adjust: []
@@ -230,6 +243,7 @@ PUTU:
   prepollen_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, finished_flower_stigma]
   dispersal_costs: [seed_pod]
   dispersal_costs_scale: [seed_pod]
+  dispersal_costs_adjust: [1]
   dispersal_before_pollen_costs: []
   dispersal_before_pollen_costs_scale: []
   dispersal_before_pollen_costs_adjust: []
